--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nothing",
   "main": "index.js",
   "scripts": {
+    "start":"npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Amit",
